# llmignore

./: .gitignore  .llmignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: index.html
npm/: README.md  package.json
scoop/: llmignore.json
src/: cli.rs  defaults.rs  lib.rs  scan.rs  sync.rs  tokens.rs
tests/: cli.rs  engine.rs  scan_secrets.rs  sync.rs  tokens.rs
