[package]
name = "llmignore-cli"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
description = "Like .gitignore, but tells AI tools what NOT to read. Fast native scanner for .llmignore files."
license = "MIT"
repository = "https://github.com/horiastanxd/llmignore"
homepage = "https://github.com/horiastanxd/llmignore"
documentation = "https://github.com/horiastanxd/llmignore"
readme = "README.md"
keywords = ["ai", "llm", "gitignore", "cli", "context"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/.github", "/npm", "/dist", "/scripts"]

[[bin]]
name = "llmignore"
path = "src/main.rs"

[lib]
name = "llmignore"
path = "src/lib.rs"

[dependencies]
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
